✨ feat: init config

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,12 @@
 CC = gcc
 CFLAGS = -Wall -Iinclude
-OBJ = src/main.o src/args.o src/display.o src/pokemon.o libs/cJSON.o
-TARGET = pokemon_display
+OBJ = src/main.o src/args.o src/display.o src/pokemon.o src/config.o libs/cJSON.o
+TARGET = pokemonc
 
 $(TARGET): $(OBJ)
 	$(CC) $(CFLAGS) -o $(TARGET) $(OBJ)
 
-src/main.o: src/main.c include/args.h include/display.h include/pokemon.h
+src/main.o: src/main.c include/args.h include/display.h include/pokemon.h include/config.h
 	$(CC) $(CFLAGS) -c src/main.c -o src/main.o
 
 src/args.o: src/args.c include/args.h
@@ -17,6 +17,9 @@ src/display.o: src/display.c include/display.h include/pokemon.h
 
 src/pokemon.o: src/pokemon.c include/pokemon.h include/cJSON.h
 	$(CC) $(CFLAGS) -c src/pokemon.c -o src/pokemon.o
+
+src/config.o: src/config.c include/config.h include/cJSON.h
+	$(CC) $(CFLAGS) -c src/config.c -o src/config.o
 
 libs/cJSON.o: libs/cJSON.c include/cJSON.h
 	$(CC) $(CFLAGS) -c libs/cJSON.c -o libs/cJSON.o
