--- a/src/config.json
+++ b/src/config.json
@@ -2,5 +2,6 @@
     "version": "0.1.0",
     "author": "JJLibra",
     "email": "2565474095@qq.com",
-    "description": "Print pokemon sprites in your terminal"
+    "description": "Print pokemon sprites in your terminal",
+    "language": "en"
 }
