--- a/src/config.json
+++ b/src/config.json
@@ -3,5 +3,6 @@
     "author": "JJLibra",
     "email": "2565474095@qq.com",
     "description": "Print pokemon sprites in your terminal",
-    "language": "en"
+    "language": "en",
+    "shiny_probability": 1.23
 }
